--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -157,17 +157,17 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/BP_CameraActor.BP_CameraActor
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
+CleanShutdown=False
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownController.TopDownController
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/Blueprints/TopDownController
-MRUItem1=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem2=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem3=/Game/TopDownBP/Blueprints/BP_CameraActor
-MRUItem4=/Game/TopDownBP/Blueprints/M_Cursor_Decal
+MRUItem0=/Game/TopDownBP/Blueprints/UnitsInterface
+MRUItem1=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem2=/Game/TopDownBP/Blueprints/TopDownController
+MRUItem3=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem4=/Game/TopDownBP/Blueprints/BP_CameraActor
+MRUItem5=/Game/TopDownBP/Blueprints/M_Cursor_Decal
 
 [DetailCategories]
 TopDownCharacter_C.Character=True
@@ -690,12 +690,27 @@ CharacterMovementComponent.ComponentReplication=True
 CharacterMovementComponent.Activation=True
 CharacterMovementComponent.Cooking=True
 CharacterMovementComponent.Events=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Interfaces=True
+Blueprint.Packaging=True
+Blueprint.Thumbnail=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter=1
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
 /Game/TopDownBP/Blueprints/TopDownController.TopDownController=0
 /Game/TopDownBP/Blueprints/M_Cursor_Decal.M_Cursor_Decal=1
+/Game/TopDownBP/Blueprints/UnitsInterface.UnitsInterface=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1668,7 +1683,7 @@ MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
 InstalledPlugins=XRVisualization
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=PIE
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.Look Yaw,InputSettings.Bindings.AxisMappings.Look Pitch,
@@ -1752,9 +1767,14 @@ WmfMediaSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.Acti
 BrushComponent=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.Look Yaw,InputSettings.Bindings.AxisMappings.Look Pitch,
 SceneComponent=
 NavMeshBoundsVolume=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.Look Yaw,InputSettings.Bindings.AxisMappings.Look Pitch,
-CapsuleComponent=CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,
-K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,
+CapsuleComponent=
+K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 BP_CameraActor_C=
+PropertyWrapper=PropertyWrapper.DefaultValueCategory.None,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,
+TopDownController_C=
+TopDownCharacter_C=CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,
+K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.None,
+SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1778,10 +1798,10 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-CapsuleComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+CapsuleComponent=
+ShapeComponent=
+PrimitiveComponent=
+SceneComponent=
 ActorComponent=
 SkeletalMeshComponent="\"Object.Collision.BodyInstance\" "
 SkinnedMeshComponent="\"Object.Collision.BodyInstance\" "
@@ -1789,6 +1809,10 @@ MeshComponent="\"Object.Collision.BodyInstance\" "
 BP_CameraActor_C=
 Character=
 Pawn=
+TopDownController_C="\"Object.ActiveUnits\" "
+PlayerController="\"Object.ActiveUnits\" "
+Controller="\"Object.ActiveUnits\" "
+TopDownCharacter_C=
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bShowGrid=False
@@ -1859,5 +1883,10 @@ bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
 
 [PlacementMode]
+RecentlyPlaced=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
+
+[DetailCategoriesAdvanced]
+TopDownCharacter_C.Collision=False
+CapsuleComponent.Collision=False
 
