--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,4 @@ Plugins/*/Intermediate/*
 # Cache files for the editor to use
 DerivedDataCache/*
 Saved/Logs/DnDRPG_GIT.log
+Saved/Logs/DnDRPG_GIT.log
