--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=DnDRPG
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/World_Mountain.World_Mountain
+EditorStartupMap=/Game/TopDownBP/Maps/TopDownExampleMap.TopDownExampleMap
 GameDefaultMap=/Game/World_Mountain.World_Mountain
 TransitionMap=
 bUseSplitscreen=True
